<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_meditations"
    >

    <fragment
        android:id="@+id/navigation_meditations"
        android:name="biz.binarysolutions.mindfulnessmeditation.ui.meditations.ParentFragment"
        android:label="@string/Meditations"
        tools:layout="@layout/fragment_meditations"
    />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="biz.binarysolutions.mindfulnessmeditation.ui.journal.ParentFragment"
        android:label="@string/Journal"
        tools:layout="@layout/fragment_practice_journal"
    />

    <fragment
        android:id="@+id/navigation_more"
        android:name="biz.binarysolutions.mindfulnessmeditation.ui.more.ParentFragment"
        android:label="@string/More"
    />

</navigation>